# wealth-first-advisor

./: .dockerignore  .gitignore  ANALYSIS_RESULTS_WEAKNESSES_ROADMAP_2026_04_28.md  DEPLOYMENT_PROMOTED_MAIN4.md  Dockerfile  EXECUTIVE_SUMMARY_SC3O_2026_04_28.txt  INTEGRATION_SUMMARY_2026-04-24.md  Makefile  POSTMORTEM_SC3K_SC3O_2026_04_28.md  PROMOTION_ANALYSIS_2026-04-24.md  README.md  ROOT_CAUSE_ANALYSIS_2026-04-24_PHASE21.md  pyproject.toml  render.env.example  render.yaml  vercel.json
artifacts/: main2_2007_Z4_detail.csv  main2_2007_Z4_summary.json  main2_2007_baseline_detail.csv  main2_2007_baseline_summary.json  main2_2007_lp15_detail.csv  main2_2007_lp15_fixedopt_detail.csv  main2_2007_lp15_fixedopt_summary.json  main2_2007_lp15_ntb02_detail.csv  main2_2007_lp15_ntb02_summary.json  main2_2007_lp15_ntb02_vs_current_best_summary.json  main2_2007_lp15_summary.json  main2_2007_ntb02_Z4_detail.csv  main2_2007_ntb02_Z4_summary.json  main2_2007_ntb02_detail.csv  main2_2007_ntb02_summary.json  main2_2007_v10_longtrain_detail.csv  main2_2007_v10_longtrain_summary.json  main2_2007_v11_converge_detail.csv  main2_2007_v11_converge_summary.json  main2_2007_v12_cashdrag5_detail.csv  main2_2007_v12_cashdrag5_summary.json  main2_2007_v14_robust_select_detail.csv  main2_2007_v14_robust_select_summary.json  main2_2007_v2_rewfix_detail.csv  main2_2007_v2_rewfix_summary.json  main2_2007_v2_rewfix_vs_current_best_summary.json  main2_2007_v3_fullfix_detail.csv  main2_2007_v3_fullfix_summary.json  main2_2007_v3_fullfix_vs_current_best_summary.json  main2_2007_v4_nofloors_detail.csv  main2_2007_v4_nofloors_summary.json  main2_2007_v4_nofloors_vs_current_best_summary.json  main2_2007_v5_bspfix_detail.csv  main2_2007_v5_bspfix_summary.json  main2_2007_v5_bspfix_vs_current_best_summary.json  main2_2007_v6_bsp3_detail.csv  main2_2007_v6_bsp3_summary.json  main2_2007_v6_bsp3_vs_current_best_summary.json  main2_2007_v7_ddp_detail.csv  main2_2007_v7_ddp_summary.json  (+732 more)
config/: promoted_main4.env
(+20087 files in other folders)
