[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wealth-first-investing"
version = "0.1.0"
description = "Wealth-first portfolio optimization and SPY backtesting utilities."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.28",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "uvicorn>=0.34",
    "yfinance>=0.2.54",
]

[project.optional-dependencies]
rl = [
    "gymnasium>=1.0",
    "stable-baselines3>=2.5",
]

[project.scripts]
wealth-first-demo = "wealth_first.cli:main"
wealth-first-tv-bridge = "wealth_first.tradingview_bridge:main"
wealth-first-train-ppo = "wealth_first.train_ppo:main"
wealth-first-main2 = "wealth_first.main2:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]